--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
+    "vue-slick-carousel": "^1.0.6",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
@@ -34,15 +35,23 @@
     "@commitlint/config-conventional": "^15.0.0",
     "@nuxtjs/eslint-config": "^8.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/style-resources": "^1.2.1",
     "@nuxtjs/stylelint-module": "^4.1.0",
     "@nuxtjs/vuetify": "^1.12.3",
+    "deepmerge": "^4.2.2",
     "eslint": "^8.4.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.2.0",
+    "fibers": "^5.0.1",
     "lint-staged": "^12.1.2",
+    "node-sass": "^6.0.1",
     "postcss-html": "^1.3.0",
     "prettier": "^2.5.1",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0",
+    "sass": "~1.32",
+    "sass-loader": "^10.2.1",
     "stylelint": "^14.1.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recommended-vue": "^1.1.0",
