--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "vue-server-renderer": "^2.6.14",
     "vue-slick-carousel": "^1.0.6",
     "vue-template-compiler": "^2.6.14",
+    "vuetify-loader": "^1.7.3",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
